--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eCommerce App</title>
+    <title>ShopEasy eCommerce App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,6 +11,10 @@
     <nav>
         <div class="logo">
             <h1>ShopEasy</h1>
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search for products...">
+            <button>Search</button>
         </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
@@ -20,25 +24,59 @@
         </ul>
     </nav>
 
+    <!-- Featured Products Section -->
+    <section class="featured-products">
+        <h2>Featured Products</h2>
+        <div class="product-list">
+            <div class="product">
+                <img src="featured1.jpg" alt="Featured Product 1">
+                <h2>Featured Product 1</h2>
+                <p>$49.99</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="featured2.jpg" alt="Featured Product 2">
+                <h2>Featured Product 2</h2>
+                <p>$59.99</p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Category Filter Section -->
+    <section class="category-filter">
+        <h2>Shop by Category</h2>
+        <ul>
+            <li><a href="#">Electronics</a></li>
+            <li><a href="#">Clothing</a></li>
+            <li><a href="#">Home & Garden</a></li>
+            <li><a href="#">Sports</a></li>
+        </ul>
+    </section>
+
     <!-- Main Content -->
     <main>
+        <h2>All Products</h2>
         <section class="product-list">
             <div class="product">
                 <img src="product1.jpg" alt="Product 1">
                 <h2>Product 1</h2>
                 <p>$19.99</p>
+                <p class="description">Short description of Product 1.</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
                 <img src="product2.jpg" alt="Product 2">
                 <h2>Product 2</h2>
                 <p>$29.99</p>
+                <p class="description">Short description of Product 2.</p>
                 <button>Add to Cart</button>
             </div>
             <div class="product">
                 <img src="product3.jpg" alt="Product 3">
                 <h2>Product 3</h2>
                 <p>$39.99</p>
+                <p class="description">Short description of Product 3.</p>
                 <button>Add to Cart</button>
             </div>
             <!-- Add more products as needed -->
@@ -47,7 +85,32 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 ShopEasy. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>About Us</h3>
+                <p>ShopEasy is your one-stop shop for all your needs.</p>
+            </div>
+            <div class="footer-section links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Cart</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section social">
+                <h3>Follow Us</h3>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 ShopEasy. All rights reserved.</p>
+        </div>
     </footer>
 
     <!-- External JavaScript -->
